Refactor plugin dependencies and introduce feature flags (#147)
* Refactor plugin dependencies and introduce feature flags

* Add floodgate as serverDependency

* Switch to ExtendedFancyLogger for improved logging

---------

Co-authored-by: OliverSchlueter <OliverSchlueter@users.noreply.github.com>